--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "per-env": "^1.0.2",
     "pg": "^8.4.2",
     "sequelize": "^5.22.3"
   },
