--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-bearer-token": "^2.4.0",
+    "express-validator": "^6.6.1",
     "faker": "^5.1.0",
+    "helmet": "^4.1.1",
+    "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "per-env": "^1.0.2",
     "pg": "^8.4.2",
-    "sequelize": "^5.22.3"
+    "sequelize": "^5.22.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "dotenv-cli": "^4.0.0",
