--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "per-env": "^1.0.2",
     "pg": "^8.4.2",
     "sequelize": "^5.22.3",
+    "socket.io": "^2.3.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
